Tue Jun 14 07:15:09 2005  Chad Elliott  <elliott_c@ociweb.com>

        * config/global.mpb:

          Set libpaths to '.' since libout is set to '.' as well.

        * modules/Creator.pm:
        * modules/WorkspaceCreator.pm:

          Corrected support for scoping and exclusion from within an
          aggregated workspace.

Fri Jun 10 06:36:02 2005  Chad Elliott  <elliott_c@ociweb.com>

        * USAGE:
        * modules/OutputMessage.pm:
        * modules/Parser.pm:

          Added a 'details' logging message and switched the "Skipping"
          message to it.

        * modules/ProjectCreator.pm:

          Fixed a bug with the '<<' and '>>' operators and Windows based
          projects that have custom input files within subdirectories.
          Also, fixed a bug where exe's and lib's that have spaces in the
          names were not escaped even if a project type implemented the
          escape_spaces() method.

        * templates/make.mpd:

          Fixed support for spaces in file names.

        * templates/makedll.mpt:

          Changed the ln setting for mingw32 to 'move /y' instead of 'mv'.

Tue May 31 15:45:44 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/TemplateParser.pm:

          Support using flag_overrides() within the context of a foreach.

        * templates/em3vcp.mpd:
        * templates/vc6dsp.mpd:
        * templates/vc7.mpd:
        * templates/vc8.mpd:

          Interpret flag_overrides of the custom_types->dependent setting
          as an array instead of a string.  This makes things consistent
          with non-overridden values of dependent.

Tue May 31 09:46:49 2005  Chad Elliott  <elliott_c@ociweb.com>

        * templates/vc7.mpd:
        * templates/vc8.mpd:

          Exclude all documentation files from the build.  Certain
          extensions are automatically excluded, but that isn't good enough
          to cover all possible documentation extensions.
