@@ -1,3 +1,11 @@
+Tue Jun 14 12:30:16 2005  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/WorkspaceCreator.pm:
+
+          Fixed a bug where excluding based on type caused those that
+          weren't excluded to be added to the workspace (which is not the
+          function of exclude).
+
 Tue Jun 14 07:15:09 2005  Chad Elliott  <elliott_c@ociweb.com>
 
         * config/global.mpb:
